# Security_project

./: .gitignore  CMakeLists.txt  commands.txt  main.cpp
include/: connection.hpp
mock_server/: mock_server.py
src/: connection.cpp
